--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -1,6 +1,37 @@
 {% extends 'layout.njk' %}
 
 {% block content %}
+    <div class="card">
+        <section class="avatar"></section>
+        <section class="details">
+            <h3>Detalhes</h3>
+            <div class="item">
+                <div>Instrutor</div>
+                <div>Artur Ceschin</div>
+            </div>
 
-Instructors
+            <div class="item">
+                <div>Idade</div>
+                <div>20</div>
+            </div>
+
+            <div class="item">
+                <div>Sexo</div>
+                <div>Masculino</div>
+            </div>
+
+            <div class="item">
+                <div>Acompanhamento</div>
+                <div>
+                    <span>Musculacao</span>
+                    <span>Crossfit</span>
+                </div>
+            </div>
+
+            <div class="item">
+                <div>Desde</div>
+                <div>22/2/2015</div>
+            </div>
+        </section>
+    </div>
 {% endblock content %}
