--- a/public/style.css
+++ b/public/style.css
@@ -86,10 +86,10 @@ header{
         opacity: 1;
     }
 }
-.avatar{
+/* .avatar{
     background: url("https://source.unsplash.com/collection/1652732") no-repeat center center;
     background-size: cover;
-}   
+}    */
 
 
 /* DETAILS */
