--- a/views/instructors/create.njk
+++ b/views/instructors/create.njk
@@ -2,9 +2,10 @@
 
 {% block content %}
     <form class="card" method="POST" action="/instructors">
-        <section class="avatar"></section>
+        <section class="avatar" style="background: url(https://source.unsplash.com/collection/1652732) no-repeat center center / cover"></section>
         <section class="details">
             <h3>Novo Instrutor</h3>
+            
             <div class="item">
                 <div>Avatar URL</div>
                 <div>
