--- a/public/style.css
+++ b/public/style.css
@@ -155,7 +155,8 @@ input::placeholder{
     font-weight: normal;
 }
 
-button[type="submit"]{
+button[type="submit"],
+a.button{
     padding: 8px 32px;
     background-color: var(--main-color);
     border: 4px;
@@ -163,4 +164,39 @@ button[type="submit"]{
     width: 100%;
     color: white;
     font-size: 16px;
+}
+
+a.button{
+    display:block;
+    text-decoration: none;
+    text-align: center;
+}
+
+#form-delete button[type="submit"]{
+    margin-top: 8px;
+    background-color: lightcoral;
+}
+
+/* INDEX INSTRUCTORS */
+
+.table-container{
+    display: block;
+    padding:40px;
+}
+
+.table-containe table{
+    border-spacing: 0;
+}
+
+.table-container table  thead tr th{
+    text-align:left;
+}
+
+td, th{
+    padding:16px;
+    border-bottom: 1px solid #d9d9d9;
+}
+
+tbody tr:last-child td{
+    border-bottom: none;
 }
