--- a/views/instructors/create.njk
+++ b/views/instructors/create.njk
@@ -6,48 +6,7 @@
         <section class="details">
             <h3>Novo Instrutor</h3>
             
-            <div class="item">
-                <div>Avatar URL</div>
-                <div>
-                    <input type="url" name="avatar_url" placeholder="https://" />
-                </div>
-            </div>
-            <div class="item">
-                <div>Instrutor</div>
-                <div>
-                    <input type="name" name="name" placeholder="Seu nome" />
-                </div>
-            </div>
-
-            <div class="item">
-                <div>Data de Nascimento</div>
-                <div>
-                    <input type="date" name="birth">
-                </div>
-            </div>
-
-            <div class="item">
-                <div>Sexo</div>
-               <div>
-                    <span>
-                    <input type="radio" name="gender" value="M" />
-                    Masculino
-                </span>
-                <span>
-                    <input type="radio" name="gender" value="F" />
-                    Feminino
-                </span>
-               </div>
-            </div>
-
-            <div class="item">
-                <div>Área de atuacao</div>
-                <div>
-                    <input type="text" name="services" placeholder="Separe os servicos prestados por vírgula">
-                </div>
-            </div>
-
-            <button type="submit">Salvar</button>
+            {% include "instructors/fields.njk" %}
         </section>
     </form>
 {% endblock content %}
