--- a/views/instructors/show.njk
+++ b/views/instructors/show.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="card">
-        <section class="avatar" style="background:url( {{instructor.image_url}}) no-repeat center center / cover"></section>
+        <section class="avatar" style="background:url( {{instructor.avatar_url}}) no-repeat center center / cover"></section>
         <section class="details">
             <h3>Detalhes</h3>
             <div class="item">
@@ -17,14 +17,14 @@
 
             <div class="item">
                 <div>Sexo</div>
-                <div>{{ instructor.gender }}</div>
+                <div>{{"Masculino" if instructor.gender == "male" else "Feminino" }}</div>
             </div>
 
             <div class="item">
                 <div>Acompanhamento</div>
                 <div>
-                    {% for service in services %}
-                        <span>{{ instructor.service }}</span>
+                    {% for service in instructor.services %}
+                        <span>{{ service }}</span>
                     {% endfor %}
 
                 </div>
@@ -32,8 +32,11 @@
 
             <div class="item">
                 <div>Desde</div>
-                <div>{{ instructor.created_at}}</div>
+                <div>{{ instructor.created_at }}</div>
             </div>
+
+            <a href="/instructors/{{instructor.id}}/edit" class="button">Editar</a>
         </section>
+
     </div>
 {% endblock content %}
