--- a/public/style.css
+++ b/public/style.css
@@ -137,7 +137,7 @@ header{
 
 /* FORM */
 
-input{
+input, select{
     width: 100%;
     /* LINHA QUANDO SELECIONADO DESATIVAR */
     outline: none;
@@ -197,6 +197,72 @@ td, th{
     border-bottom: 1px solid #d9d9d9;
 }
 
+th{
+    text-transform: uppercase;
+    color: #777;
+    font-size: 14px;
+}
+
 tbody tr:last-child td{
     border-bottom: none;
+}
+
+tbody tr td:last-child a,
+.table-container > a{
+    background-color: var(--main-color);
+    padding:8px 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    font-size: 12px;
+    border-radius: 4px;
+}
+
+.table-container > a{
+    margin-bottom: 16px;
+    display: inline-block;
+}
+
+tbody tr td:first-child{
+    display:grid;
+    grid-template-columns: 64px 1fr;
+    align-items: center;
+}
+
+tbody tr td:first-child span{
+    width: 48px;
+    height: 48px;
+    background-position: center;
+    background-size: cover;
+
+    border-radius: 50%;
+    box-shadow: 3px 1px 6px -4px black;
+    border: 2px solid white;
+}
+
+.table-container table  thead tr th:last-child, td:last-child{
+    text-align: center;
+}
+
+tr td:nth-child(2) span{
+    padding: 8px 16px;
+    background-color: var(--secondary-color);
+    border-radius:18px;
+    color: #777;
+    margin-right: 4px;
+    margin-top: 8px;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
+tbody tr td:first-child{
+    display:grid;
+    grid-template-columns: 64px 1fr;
+    align-items: center;
+}
+
+
+.table-container table  thead tr th:last-child, td:last-child{
+    text-align: center;
 }
