--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -2,9 +2,8 @@
 
 {% block content %}
 
-
     <div class="card">
-        <section class="avatar" style="background: url(https://source.unsplash.com/collection/1652732) no-repeat center center / cover"></section>
+        <section class="avatar" style="background: url({{ instructor.avatar_url}}) no-repeat center center / cover"></section>
         <section class="details">
             <form method="POST" action="/instructors?_method=PUT">
 
@@ -20,6 +19,7 @@
                 <input type="hidden" name="id" value="{{ instructor.id }}"/>
                 <button type="submit">Deletar</button>
             </form>
+
         </section>
 
     </div>
