--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -2,12 +2,13 @@
 
 {% block content %}
     <div class="card table-container">
-
+        <a href="/instructors/create">Novo</a>
         <table width="100%">
             <thead>
                 <tr>
                     <th>Instrutor</th>
                     <th>Atendimento</th>
+                    <th>Acão</th>
                 </tr>
             </thead>
 
@@ -15,8 +16,18 @@
 
                 {% for instructor in instructors %}
                     <tr>
-                        <td>{{ instructor.name }}</td>
-                        <td>{{ instructor.services}}</td>
+
+                        <td>
+                            <span style="background-image:url({{ instructor.avatar_url }})"></span>
+                            {{ instructor.name }}</td>
+                        <td >
+                            {% for service in instructor.services %}
+                                <span>{{ service }}</span>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            <a href="/instructors/{{ instructor.id}}">ver</a>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
