--- a/views/layout.njk
+++ b/views/layout.njk
@@ -11,11 +11,13 @@
     <body>
         <header>
             <div class="links">
-                <a href="/" class="active">Instructors</a>
+                <a href="/instructors">Instructors</a>
                 <a href="/members">Members</a>
             </div>
         </header>
 
         {% block content %}{% endblock content %}
+
+        <script src="/scripts.js"></script>
     </body>
 </html>
