working with database

--- a/src/app/views/instructors/show.njk
+++ b/src/app/views/instructors/show.njk
@@ -17,7 +17,7 @@
 
             <div class="item">
                 <div>Sexo</div>
-                <div>{{"Masculino" if instructor.gender == "male" else "Feminino" }}</div>
+                <div>{{"Masculino" if instructor.gender == "M" else "Feminino" }}</div>
             </div>
 
             <div class="item">
