--- a/public/style.css
+++ b/public/style.css
@@ -244,7 +244,7 @@ tbody tr td:first-child span{
     text-align: center;
 }
 
-tr td:nth-child(2) span{
+/* tr td:nth-child(2) span{
     padding: 8px 16px;
     background-color: var(--secondary-color);
     border-radius:18px;
@@ -254,7 +254,7 @@ tr td:nth-child(2) span{
     display: inline-block;
     text-transform: uppercase;
     font-size: 12px;
-}
+} */
 
 tbody tr td:first-child{
     display:grid;
