--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -21,9 +21,7 @@
                             <span style="background-image:url({{ instructor.avatar_url }})"></span>
                             {{ instructor.name }}</td>
                         <td >
-                            {% for service in instructor.services %}
-                                <span>{{ service }}</span>
-                            {% endfor %}
+                            {{ instructor.services}}
                         </td>
                         <td>
                             <a href="/instructors/{{ instructor.id}}">ver</a>
