--- a/src/app/views/members/show.njk
+++ b/src/app/views/members/show.njk
@@ -22,7 +22,7 @@
 
             <div class="item">
                 <div>Sexo</div>
-                <div>{{"Masculino" if member.gender == "male" else "Feminino" }}</div>
+                <div>{{"Masculino" if member.gender == "M" else "Feminino" }}</div>
             </div>
 
             <div class="item">
@@ -40,6 +40,11 @@
             <div class="item">
                 <div>Altura (cm)</div>
                 <div>{{ member.height }}</div>
+            </div>
+
+            <div class="item">
+                <div>Aluno de</div>
+                <div>{{ member.instructor_name }}</div>
             </div>
 
             <a href="/members/{{member.id}}/edit" class="button">Editar</a>
