--- a/public/style.css
+++ b/public/style.css
@@ -261,3 +261,32 @@ tbody tr td:first-child{
     grid-template-columns: 64px 1fr;
     align-items: center;
 }
+
+/* FILTERS */
+
+.table-container .header{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.table-container .header a{
+    margin: 0;
+    width: 120px;
+    border-radius: 4px;
+}
+.table-container .header form{
+    display: grid;
+    grid-template-columns: 1fr 120px;
+    align-items: center;
+    grid-gap: 8px;
+}
+.table-container .header form input{
+    border: 1px solid #eee;
+    padding: 4px 8px;
+}
+.table-container .header form button{
+    margin: 0;
+    border-radius: 4px;
+}
