--- a/src/app/views/instructors/edit.njk
+++ b/src/app/views/instructors/edit.njk
@@ -23,4 +23,16 @@
         </section>
 
     </div>
+
+    <script>
+        const formDelete = document.querySelector("#form-delete")
+
+        formDelete.addEventListener("submit", (event) => {
+            const confirmation = confirm("Deseja deletar ?")
+
+            if (!confirmation) {
+                event.preventDefault()
+            }
+        })
+    </script>
 {% endblock content %}
