project is done

--- a/src/app/views/instructors/edit.njk
+++ b/src/app/views/instructors/edit.njk
@@ -24,15 +24,5 @@
 
     </div>
 
-    <script>
-        const formDelete = document.querySelector("#form-delete")
-
-        formDelete.addEventListener("submit", (event) => {
-            const confirmation = confirm("Deseja deletar ?")
-
-            if (!confirmation) {
-                event.preventDefault()
-            }
-        })
-    </script>
+    {% include '../validation.njk'%}
 {% endblock content %}
