--- a/public/style.css
+++ b/public/style.css
@@ -290,3 +290,32 @@ tbody tr td:first-child{
     margin: 0;
     border-radius: 4px;
 }
+
+/* PAGINATION */
+
+.table-container{
+    display: grid;
+    grid-template: 64px 1fr 16px / 1fr  ;
+}
+
+.table-container .header{
+    margin: 0;
+    align-self: start;
+}
+
+.table-container .pagination{
+    margin: 0;
+    align-self: end;
+    justify-self: center;
+}   
+ .pagination a,
+ .pagination span{
+    color: var(--main-color);
+    text-decoration: none;
+    margin-right: 1rem;
+}
+
+.pagination a:hover{
+    filter:brightness(0.3) ;
+    border-bottom: 1px solid var(--main-color);
+}
