--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -48,5 +48,7 @@
             </tbody>
         </table>
 
+        <div class="pagination" data-page="{{pagination.page}}" data-total="{{pagination.total}}" data-filter="{{filter}}"></div>
+
     </div>
 {% endblock content %}
